[project]
name = "ComfyUI_Workflow_Timer"
description = "A simple workflow timer node for ComfyUI."
version = "1.0.5"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/mike420/ComfyUI_Workflow_Timer"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/mike420/ComfyUI_Workflow_Timer/issues"

[tool.comfy]
PublisherId = "mike420"
DisplayName = "ComfyUI_Workflow_Timer"
Icon = "https://raw.githubusercontent.com/mike420/ComfyUI_Workflow_Timer/refs/heads/main/img/magic_mike.jpg"
includes = [] 